// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders popup modal body for concern suggestion 1`] = `
<select
  className="select large"
  disabled={undefined}
  name="concernType"
  onChange={[Function]}
  required={undefined}
  value="active"
>
  <option
    disabled={true}
    value=""
  >
    Select a concern type
  </option>
  <option
    disabled={undefined}
    value="active"
  >
    Active concern
  </option>
  <option
    disabled={undefined}
    value="inactive"
  >
    Inactive concern
  </option>
</select>
`;

exports[`renders popup modal body for goal suggestion 1`] = `
<div>
  <select
    className="select large"
    disabled={undefined}
    name="concernId"
    onChange={[Function]}
    required={undefined}
    value="concern-id"
  >
    <option
      disabled={true}
      value=""
    >
      Select a concern
    </option>
    <optgroup
      label="Suggested concerns"
    >
      <option
        value="concern-id"
      >
        Concern Title
      </option>
    </optgroup>
    <optgroup
      label="All other concerns"
    >
      <option
        value="concern-id"
      >
        Concern Title
      </option>
    </optgroup>
  </select>
  <div
    className="acceptModalInput"
  >
    <select
      className="select large"
      disabled={undefined}
      name="concernType"
      onChange={[Function]}
      required={undefined}
      value="active"
    >
      <option
        disabled={true}
        value=""
      >
        Select a concern type
      </option>
      <option
        disabled={undefined}
        value="active"
      >
        Active concern
      </option>
      <option
        disabled={undefined}
        value="inactive"
      >
        Inactive concern
      </option>
    </select>
  </div>
</div>
`;
